--- a/package.json
+++ b/package.json
@@ -3,42 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.3",
-    "react-scripts": "4.0.3",
-    "recordrtc": "^5.6.2",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
+    "react-scripts": "0.9.5",
+    "recordrtc": "^5.4.2",
+    "redux": "^3.7.2",
+    "uuid": "^3.1.0"
+  },
+  "devDependencies": {
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "uuid": "^8.3.2",
-    "uuidv4": "^6.2.7",
-    "web-vitals": "^1.1.1"
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
